add a cool testing page

--- a/wasm/Makefile
+++ b/wasm/Makefile
@@ -1,2 +1,12 @@
+all: wasm_exec.js cotangent.wasm server;
+
 wasm_exec.js:
 	cp "$(shell go env GOROOT)/misc/wasm/wasm_exec.js" ./wasm_exec.js
+
+cotangent.wasm:
+	GOOS=js GOARCH=wasm go build -o cotangent.wasm ../main.go
+
+server:
+	go run server.go
+
+.PHONY: server
